# redis-lens

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/architecture/: system-overview.md
docs/plans/: 2026-02-14-redis-lens-design.md  2026-02-18-cli-pubsub-design.md  (+3 more)
scripts/: generate-icon.py
src/: test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: browser.rs  cli.rs  connection.rs  editor.rs  health.rs  mod.rs  monitor.rs  pubsub.rs
src-tauri/src/config/: mod.rs  profile_store.rs
src-tauri/src/redis/: mod.rs
src-tauri/src/redis/browser/: mod.rs  model.rs  scanner.rs  tree.rs
src-tauri/src/redis/cli/: executor.rs  mod.rs  model.rs  parser.rs  suggestions.rs
src-tauri/src/redis/connection/: manager.rs  mod.rs  model.rs  ssh_tunnel.rs  uri.rs
src-tauri/src/redis/editor/: hash_ops.rs  list_ops.rs  mod.rs  model.rs  set_ops.rs  special_ops.rs  stream_ops.rs  string_ops.rs  ttl_ops.rs  zset_ops.rs
src-tauri/src/redis/monitor/: client_list.rs  info_parser.rs  mod.rs  model.rs  poller.rs  slow_log.rs
src-tauri/src/redis/pubsub/: discovery.rs  mod.rs  model.rs  subscriber.rs
src-tauri/src/utils/: errors.rs  mod.rs
src/app/: layout.tsx  (+1 more)
(+65 files in other folders)
