[package]
name = "redis-lens"
version = "0.1.0"
description = "The Definitive Open-Source Redis GUI"
authors = ["RedisLens Contributors"]
license = "MIT"
repository = "https://github.com/redis-lens/redis-lens"
edition = "2021"

[lib]
name = "redis_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }
deadpool-redis = "0.18"

# URI parsing
url = "2"
percent-encoding = "2"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# SSH tunneling
russh = "0.46"
russh-keys = "0.46"

# Encoding
base64 = "0.22"
